/*
 * Generated file com/nutanix/dataprotection/v4/error/error.proto.
 *
 * Product version: 16.9.0-SNAPSHOT
 *
 * Part of the Nutanix Data Proetction gRPC APIs
 *
 * (c) 2024 Nutanix Inc.  All rights reserved
 *
 */

syntax = "proto3";

package com.nutanix.dataprotection.v4.error;

option java_multiple_files = true;
option java_package = "com.nutanix.dataprotection.v4.error";
option go_package = "com/nutanix/dataprotection/v4/error";

import "com/nutanix/common/v1/config/config.proto";

/*
 * This schema is generated from AppMessage.java
 */

message AppMessage {
  /*
   * The message string.
   */

  string message = 201;
  /*
   * 
   */

  com.nutanix.common.v1.config.MessageSeverityMessage.MessageSeverity severity = 202;
  /*
   * The code associated with this message.This string is typically prefixed by the namespace the endpoint belongs to. For example: VMM-40000
   */

  string code = 203;
  /*
   * Locale for this message. The default locale would be 'en-US'.
   */

  string locale = 204;
  /*
   * The error group associated with this message of severity ERROR.
   */

  string error_group = 205;
  /*
   * The map of argument name to value.
   */

  map<string, string> arguments_map = 206;
  }
/*
 * OneOf item wrapper message
 */

message AppMessageArrayWrapper {
  /*
   * Value field in oneOf item wrapper message
   */

  repeated com.nutanix.dataprotection.v4.error.AppMessage value = 1000;
  }
/*
 * OneOf item wrapper message
 */

message SchemaValidationErrorWrapper {
  /*
   * Value field in oneOf item wrapper message
   */

  com.nutanix.dataprotection.v4.error.SchemaValidationError value = 1000;
}
/*
 * This schema is auto-generated by the Open API Dev Platform as REST response for 4xx and 5xx error responses.
 */

message ErrorResponse {
  /*
   * This schema is auto-generated by the Open API Dev Platform as REST response for 4xx and 5xx error responses.
   */
  oneof error {
    /*
     * 
     */
    com.nutanix.dataprotection.v4.error.AppMessageArrayWrapper app_message_array_error = 201;
    /*
     * 
     */
    com.nutanix.dataprotection.v4.error.SchemaValidationErrorWrapper schema_validation_error_error = 202;
  }
  }
/*
 * This schema is generated from SchemaValidationError.java
 */

message SchemaValidationError {
  /*
   * Timestamp of the response.
   */

  string timestamp = 201;
  /*
   * The HTTP status code of the response.
   */

  int32 status_code = 202;
  /*
   * The generic error message for the response.
   */

  string error = 203;
  /*
   * API path on which the request was made.
   */

  string path = 204;
  /*
   * List of validation error messages
   */

  repeated com.nutanix.dataprotection.v4.error.SchemaValidationErrorMessage validation_error_messages = 205;
  }
/*
 * This schema is generated from SchemaValidationErrorMessage.java
 */

message SchemaValidationErrorMessage {
  /*
   * The part of the request that failed validation. Validation can fail for path, query parameters, and request body.
   */

  string location = 201;
  /*
   * The detailed message for the validation error.
   */

  string message = 202;
  /*
   * The path of the attribute that failed validation in the schema.
   */

  string attribute_path = 203;
}